# neural-net

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: bench_matmul.cpp
include/: activations.hpp  dataloader.hpp  layer.hpp  loss.hpp  matrix.hpp  network.hpp  optimizer.hpp  serializer.hpp
metal/: matmul.metal  matmul_metal.h  matmul_metal.mm
tests/: test_matrix.cpp
tools/: train.cpp
